# pbterm

./: CMakeLists.txt  readme.md
src/: Config.cpp  Inkview.hpp  Submenu.cpp  Term.cpp
